recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:-2: error: ambiguous reference to overloaded definition,
both method spiral in class SpiralUse of type (steps: Int, angle: Int, length: Int, increment: Int)Unit
and  method spiral in class SpiralUse of type (steps: Int, angle: Int, length: Int, increment: Int)Unit
match argument types (Int,Int,Int,Int)
			spiral(steps-1, angle, length+increment, increment);
                        ^SpiralUse:3: error: ambiguous reference to overloaded definition,
both method spiral in class SpiralUse of type (steps: Int, angle: Int, length: Int, increment: Int)Unit
and  method spiral in class SpiralUse of type (steps: Int, angle: Int, length: Int, increment: Int)Unit
match argument types (Int,Int,Int,Int)
    spiral(100,91,1,2);
    ^SpiralUse:10: error: ambiguous reference to overloaded definition,
both method spiral in class SpiralUse of type (steps: Int, angle: Int, length: Int, increment: Int)Unit
and  method spiral in class SpiralUse of type (steps: Int, angle: Int, length: Int, increment: Int)Unit
match argument types (Int,Int,Int,Int)
    spiral(steps-1,angle,length+increment,increment)
    ^SpiralUse:6: error: method spiral is defined twice
  conflicting symbols both originated in file 'plm.runtime1.SpiralUse'
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
    ^