recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(100,91,1,2);
}

def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if(steps!=0){
    avance(length)
    gauche(angle)
    spiral(steps-1,angle,length+increment,increment)
  }
}